--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -4,3 +4,8 @@
 
 - name: 'INIT | Manage variables to use for our target'
   include: 'manage_variables.yml'
+
+
+- name: 'INSTALL | Manage installation tasks for your OS family'
+  become: True
+  include: "install_{{ ansible_os_family | lower }}.yml"
